user update resource added. tests cases to python added. DTO propagated as arguments from controller side. Validation of the DTO enabled.
